Add: 新功能“大佬警告”，优化配置文件位置

--- a/src/config.yml
+++ b/src/config.yml
@@ -17,3 +17,7 @@ addons:
   CombatDetails: true
   # 快捷指令
   FastCommands: true
+  # 大佬警告
+  DalaoWarning: true
+  # 平衡性调整
+  BalancedAdjustments: true
