Add: 引入TheAPI，提供NMS支持，降低开发难度

--- a/src/addons/extraPlaceHolder.yml
+++ b/src/addons/extraPlaceHolder.yml
@@ -40,7 +40,7 @@ defaultMapAuthor: "public"
 mapAuthor:
   test: "test_author"
 
-teamNameFormat: "{tColor}{tName} {tHeart} &f| {tAlive}"
+teamNameFormat: "{tColor}{tName} {tHeart} | {tAlive}"
 
 team_in_danger: "[危险]"
 
