--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,8 +1,7 @@
 name: 233BedWars
 author: SerendipityR
 version: 1.0.0
-depend: [BedWars1058]
-softdepend: [PlaceholderAPI]
+softdepend: [BedWars1058, TheAPI, PlaceholderAPI]
 main: cn.serendipityr._233bedwars._233BedWars
 permissions:
   bw233.cmd:
