--- a/src/addons/shopItemAddon.yml
+++ b/src/addons/shopItemAddon.yml
@@ -38,30 +38,42 @@ settings:
   landmine:
     enable: true
     explosion_damage: 5
+    set_fire: false
+    break_block: false
   light_landmine:
     enable: true
     explosion_damage: 5
+    set_fire: false
+    break_block: false
   flight_firework:
     enable: true
     fuse_delay: 1
     explosion_damage: 3
+    set_fire: false
+    break_block: false
   lucky_block:
     enable: true
     # 格式: 幸运/厄运:触发概率:执行类型
     # 执行类型:
     # ITEM - 物品名称:物品描述:物品ID:物品数量:物品附魔
-    # EFFECT - 药水效果:效果等级:持续时间:粒子效果
+    # EFFECT - 药水效果:效果等级:持续时间:粒子效果:强制覆盖
     # EXPLOSION - 爆炸威力:生成火焰:破坏方块
     # TELEPORT - X轴增量:Y轴增量:Z轴增量
     # COMMANDS - 以控制台执行具体指令 (变量: %player_name%)
     # SAY - 以玩家身份发送消息 (变量: %player_name%)
     possibilities:
       - "0.1:LUCKY:ITEM:&b幸运的钻石头盔:&a描述1#&6描述2#&c描述3:DIAMOND_HELMET:1:PROTECTION_ENVIRONMENTAL.4#DURABILITY.3"
-      - "0.1:LUCKY:EFFECT:SPEED:0:30:true"
+      - "0.1:LUCKY:EFFECT:SPEED:0:30:true:true"
       - "0.1:UNLUCKY:TELEPORT:0:30:0"
       - "0.1:UNLUCKY:EXPLOSION:5:true:true"
       - "0.1:UNLUCKY:COMMAND:points add %player_name% 1"
       - "0.1:UNLUCKY:SAY:我是神里绫华的狗！"
+  grenade:
+    enable: true
+    explosion_damage: 3
+    fuse_delay: 3
+    set_fire: false
+    break_block: true
 
 messages:
   cooling_actionbar: "&e&l{item} {progress} &f{cooling_time} &e秒"
@@ -120,4 +132,9 @@ items:
     category: "utility-category"
     slot: 36
     material: SPONGE
+    cost: "iron:40"
+  grenade:
+    category: "utility-category"
+    slot: 37
+    material: FIREWORK_CHARGE
     cost: "iron:40"
