Add: 允许按倍率夺取对手经验

--- a/src/addons/xpResMode.yml
+++ b/src/addons/xpResMode.yml
@@ -20,6 +20,12 @@ choose_exp: "&e你选择了 &b&l经验模式"
 
 pick_up_sound: "ORB_PICKUP:1:2"
 
+# 杀死对手夺取经验百分比
+# 设置为 0 关闭此功能
+kill_reclaim_exp: 100
+
+kill_reclaim_message: "&a你杀死 {vtColor}{victim} &a获得了 &6&l{exp} &a点经验"
+
 Item:
   1:
     material: PAPER
