Add: [大佬警告] 更正平均等级差判断逻辑 & 提供更多占位符

--- a/src/addons/dalaoWarning.yml
+++ b/src/addons/dalaoWarning.yml
@@ -10,6 +10,12 @@ averageLevelDifference: 20
 
 highLevelRange: 50
 
+# 可用占位符
+# {tColor} - 队伍颜色
+# {tName} - 队伍名称
+# {highestLevel} - 队内最高等级
+# {highestPlayer} - 对内最高等级玩家
+# {avgLevel} - 队伍平均等级
 warningMsg:
   - "&c&l[DALAO-WARNING/大佬警告]"
   - "&e本局游戏建议先打大佬队伍qwq: {tColor}{tName}"
